[package]
name = "theater"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
theater_derive = { path = "./theater_derive" }
theater_types = { path = "./theater_types" }
async-trait = "0.1.58"
