[package]
name = "theater_types"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1.58"
syn = "1.0"
quote = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.40"
thiserror = "1.0.57"
